--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <!-- header end -->
     <main>
-        <!-- top players and top blog -->
+        <!-- top players and top blogs start -->
         <section class="container">
             <div class="top-players">
                 <h2 class="section-title">Top Players</h2>
@@ -59,9 +59,43 @@
                             <p class="blog-author">By <a href="">Danny Sapio</a></p>
                         </div>
                     </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
+                            <p class="blog-author">By <a href="">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="blog-author">By <a href="">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="blog-author">By <a href="">Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
+        <!-- top players and top blogs end -->
+
+        <!-- Letest Courses starts -->
+        <section class="container">
+            <h2 class="section-title">Letest Courses</h2>
+        </section>
+        <!-- Letest Courses end -->
     </main>
 </body>
 </html>
